# railway-contacts

./: .env  Cargo.toml
.cargo/: config
front/: app-3a12e97cfa64eb4.js  app-3a12e97cfa64eb4_bg.wasm  app-a6ea771735f9b6a5.js  app-a6ea771735f9b6a5_bg.wasm  app-d12c2a3d500a1878.js  app-d12c2a3d500a1878_bg.wasm  app-dde9debcf7a07367.js  app-dde9debcf7a07367_bg.wasm  index.html  tailwind-b6d029a68ac290f0.css
src/: app.rs  main.rs
src/crud/update/: update_route.rs
