[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "1.4.8", features = ["postgres"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"]}
